<resources>
    <string name="app_name">Bag Zombie</string>

    <!-- Main activity -->
    <string name="main_instruction">How to use:\n1. Find a quiet heavy bag.\n2. Put on headphones.\n3. Calibrate your microphone sensitivity.\n4. Start a fight in the app.\n5. Listen for punch commands.\n6. Punch.\n7. The microphone registers the sound of your punches.</string>
    <string name="calibrate_microphone_button">Calibrate microphone</string>
    <string name="manual_fight_button">Custom fight</string>

    <!-- Microphone calibration activity -->
    <string name="sensitivity_legend">Sensitivity of peak detector applied to broadband detection function (%).</string>
    <string name="threshold_legend">Energy rise within a frequency bin necessary to count toward broadband total (dB).</string>
    <string name="microphone_calibration_tips">Tips:\n- Wear headphones to avoid sound feedback.\n-The first slider gets more sensitive to the left. The second gets more sensitive to the right.\n-Avoid any loud sounds other than punching, e.g. sneakers squeaking.\n- If you are in a noisy environment with lots of other boxes, this won\'t work.</string>
    <string name="dot_bang_legend">Dot shown for every bang detected: </string>

    <!-- Random fight activity -->
    <string name="hit_count_label">Hits</string>
    <string name="miss_count_label">Misses</string>
    <string name="timeout_count_label">Timeout</string>
    <string name="reaction_time">%1$d ms</string>
    <string name="timeout_reaction_time_constant">Timeout</string>
    <string name="miss_reaction_time_constant">Miss</string>

    <!-- Manual fight setup activity -->
    <string name="round_count_label"># of rounds</string>
    <string name="round_duration_label">Round duration (in seconds)</string>
    <string name="rest_duration_label">Rest duration (in seconds)</string>
    <string name="punch_combinations_label">Punch combinations</string>
    <string name="clear_punches_link_label">Clear</string>
    <string name="custom_combo_hint">e.g. \'1 2\'</string>
    <string-array name="punch_combinations_array">
        <item>Single punches</item>
        <item>Two punch combos</item>
        <item>Popular four combos</item>
        <item>Every combo and the kitchen sink</item>
        <item>Custom</item>
    </string-array>

    <!-- Manual fight activity -->
    <string name="fight_state_none">Done</string>
    <string name="fight_state_active">Active</string>
    <string name="fight_state_rest">Rest</string>
    <string name="fight_state_stopped">Stopped</string>
    <string name="round_info">Round %1$d - %2$d:%3$02d</string>
    <string name="punch_stats_heading">Punch stats</string>

    <!-- Round stats fragment -->
    <string name="rounds_title">Round %1$d</string>
    <string name="summary_round_title">Summary</string>
    <string name="hit_label">Hits: </string>
    <string name="heavy_hit_label">Heavy hits: </string>
    <string name="miss_label">Misses: </string>
    <string name="timeout_label">Too slow: </string>
    <string name="fastest_reaction_time_label">Fastest reaction time: </string>
    <string name="average_reaction_time_label">Average reaction time: </string>
    <string name="ms_value">%1$d ms</string>

    <!-- Activity that tells the user that the microphone permission is necessary -->
    <string name="microphone_permission_rational">This app calls out random boxing combinations and registers when your glove hits the heavy bag. To register the hit, the app uses the microphone to listen for the bang sound. If you don\'t grant microphone permissions, this app cannot function.\n\nPlease tap back, start over, and grant the microphone permission.</string>

    <!-- Help activity -->
    <string name="help_troubleshooting_heading">Troubleshooting</string>
    <string name="help_troubleshooting_body_text">The audio detection of bag punches can be finicky. There simply isn\'t a way of differentiating between your punch and a loud punch by someone else next to you. Or a loud sneaker screech may be detected as a punch. If you want quality detection, there are $200 dollar sensors that go into the glove. However, there are things that you can do to improve the sound detection of punches:\n\n1. Be in a quiet room by yourself.\n2. Use head phones. The sound that the app creates will create a sound feedback loop to the app.\n3. Use the sound calibration setting to tune the microphone on your phone.</string>
    <string name="help_punches_heading">Punches</string>
    <string name="help_punches_body_text">Wonder what those numbers that the app yells mean? They are standardized references to specific punches.\n\n1 = jab\n2 = right hand\n3 = left hook\n4 = right hook (or overhand right)\n5 = left uppercut\n6 = right uppercut\n\nFor more information, see:\n<a href="http://www.expertboxing.com/boxing-strategy/punch-combinations/johnnys-punching-combinations-list">http://www.expertboxing.com/boxing-strategy/punch-combinations/johnnys-punching-combinations-list</a></string>

    <!-- About activity -->
    <string name="about_app_heading">About the app</string>
    <string name="about_app_body_text">Bag Zombie is a fitness app to make working out with a heavy bag more fun. It simulates an imaginary fight against the heavy bag by calling out punch combinations. The phone\'s microphone listens for punches to tell you the reaction time.\n\nIt\'s a heck of a lot more fun to react to something than to fight an inanimate heavy bag. Still the heavy bag won\'t fight back. It\'s pretty much like a zombie that\'ll take your punches, but now it\'s at least alive in a zombie way!</string>
    <string name="about_developer_heading">About the developer</string>
    <string name="about_developer_body_text">I have pioneered online music shopping at one of the first online music startups and the same for online movie downloads. I\'ve worked for the titan of the Internet: Google. Right now, I\'m developing Android apps. When I\'m not coding, you can find me at the beach doing acroyoga. Feel free to contact me at <a href="mailto:thomas@playposse.com">thomas@playposse.com</a></string>
    <string name="about_tarsosdsp_heading">TarsosDSP</string>
    <string name="about_tarsosdsp_body_text">The sound detection is done by a software library called TarsosDSP. If anyone knows how to detect the bang of the punch better, please contact me. Also if someone knows how to make tuning the microphone automatic, please let me know.\n\nYou can find the library here:\n<a href="https://github.com/JorenSix/TarsosDSP">https://github.com/JorenSix/TarsosDSP</a></string>
    <string name="about_credits_heading">Credits and copyright</string>
    <string name="about_credits_body_text">(C) 2017 Thomas Fischer\n\nMale voice by Wade Dauksch\nFemale voice by Katabelle\n\nThe logo is a combination of artwork from the <a href="thenounproject.com">thenounproject.com</a>:\nPunching Bag by Creative Stall from the Noun Project\nFighter by Nicolas Vicent from the Noun Project\nStar by Ralf Schmitzer from the Noun Project</string>

    <!-- Settings activity constants -->
    <string-array name="voices_label_array">
        <item>Male voice</item>
        <item>Female voice</item>
        <item>Developer\'s voice</item>
    </string-array>
    <string-array name="voices_value_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>


    <!-- Service notification -->
    <string name="service_notification_title">Bag Zombie</string>
    <string name="service_notification_text">The fight is running.</string>

    <!-- Menu -->
    <string name="help_menu">Help</string>
    <string name="settings_menu">Settings</string>
    <string name="send_feedback_menu">Send us feedback</string>
    <string name="about_menu">About</string>

    <!-- Dialog and e-mail template for the user to send feedback -->
    <string name="dialog_continue_button">Continue</string>
    <string name="dialog_cancel_button">Cancel</string>
    <string name="feedback_dialog_title">Send us feedback!</string>
    <string name="feedback_dialog_message">An e-mail will be opened where you can send me feedback.</string>
    <string name="feedback_email_recipient">thomas@playposse.com</string>
    <string name="feedback_email_subject">Feedback About Bag Zombie Android App</string>
    <string name="feedback_email_body">Please, send me your feedback. I care about hearing from you.</string>

    <!-- Input validation messages -->
    <string name="required_validation_message">Required</string>
</resources>
