<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:columnCount="4" android:padding="8dp"
    tools:context="com.playposse.heavybagzombie.activity.RoundStatsFragment">

    <TextView
        android:id="@+id/roundTitleTextView"
        style="@style/Base.TextAppearance.AppCompat.Large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnSpan="4"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:text="@string/hit_label" />

    <TextView
        android:id="@+id/hitValueTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:text="@string/fastest_reaction_time_label" />

    <TextView
        android:id="@+id/fastestReactionTimeValueTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:text="@string/heavy_hit_label" />

    <TextView
        android:id="@+id/heavyHitValueTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:text="@string/average_reaction_time_label" />

    <TextView
        android:id="@+id/averageReactionTimeValueTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:text="@string/timeout_label" />

    <TextView
        android:id="@+id/timeoutValueTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1" />

    <Space
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_columnWeight="1" />

    <Space
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_columnWeight="1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:text="@string/miss_label" />

    <TextView
        android:id="@+id/missesValueTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1" />
</GridLayout>
