<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_fight"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activity.FightActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/startButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_play_arrow_black_24dp" />

        <ImageButton
            android:id="@+id/pauseButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_pause_black_24dp" />

        <ImageButton
            android:id="@+id/stopButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_stop_black_24dp" />
    </LinearLayout>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="2">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:text="@string/hit_count_label" />

            <TextView
                android:id="@+id/hitCountTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="5" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:text="@string/miss_count_label" />

            <TextView
                android:id="@+id/missCountTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="5" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:text="@string/timeout_count_label" />

            <TextView
                android:id="@+id/timeoutCountTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="5" />
        </GridLayout>
    </android.support.v7.widget.CardView>

    <Space
        android:layout_width="match_parent"
        android:layout_height="16dp" />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

            <ListView
                android:id="@+id/hitLogListView"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
    </android.support.v7.widget.CardView>

</LinearLayout>
