<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_manual_fight"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.playposse.heavybagzombie.activity.ManualFightSetupActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <android.support.v7.widget.CardView
                android:id="@+id/roundInputCardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp">

                <GridLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:columnCount="2"
                    android:padding="8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_columnWeight="1"
                        android:labelFor="@+id/roundCountEditText"
                        android:paddingEnd="8dp"
                        android:text="@string/round_count_label" />

                    <EditText
                        android:id="@+id/roundCountEditText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_columnWeight="1"
                        android:layout_gravity="fill_horizontal"
                        android:inputType="numberDecimal" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_columnWeight="1"
                        android:labelFor="@+id/roundDurationEditText"
                        android:paddingEnd="8dp"
                        android:text="@string/round_duration_label" />

                    <EditText
                        android:id="@+id/roundDurationEditText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_columnWeight="1"
                        android:layout_gravity="fill_horizontal"
                        android:inputType="numberDecimal" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_columnWeight="1"
                        android:labelFor="@+id/restDurationEditText"
                        android:paddingEnd="8dp"
                        android:text="@string/rest_duration_label" />

                    <EditText
                        android:id="@+id/restDurationEditText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_columnWeight="1"
                        android:layout_gravity="fill_horizontal"
                        android:inputType="numberDecimal" />
                </GridLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp">

                <GridLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:columnCount="2"
                    android:padding="8dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_columnWeight="1"
                        android:labelFor="@+id/combinationSpinner"
                        android:paddingEnd="8dp"
                        android:text="@string/punch_combinations_label" />

                    <Spinner
                        android:id="@+id/combinationSpinner" android:entries="@array/punch_combinations_array"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_columnWeight="1"
                        android:layout_gravity="fill_horizontal" />

                    <LinearLayout
                        android:id="@+id/customPunchesLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_columnSpan="2"
                        android:orientation="vertical">

                        <GridLayout
                            android:id="@+id/customPunchesGrid"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:id="@+id/clearPunchesLink"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="end"
                            android:text="@string/clear_punches_link_label" />
                    </LinearLayout>
                </GridLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>

        <android.support.design.widget.FloatingActionButton
            android:elevation="4dp"
            android:id="@+id/startFightButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_margin="24dp"
            android:src="@drawable/ic_play_arrow_black_24dp" />
    </RelativeLayout>
</LinearLayout>
